updated html and package.json file

--- a/frontend/test.html
+++ b/frontend/test.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>Test AI Assistant</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>AI Chat Assistant</title>
 </head>
 <body>
-    <h1>Test Page for AI Assistant</h1>
-    <p>This is a test page. The AI assistant should appear in the bottom right corner.</p>
-    
-    <!-- Load the AI Assistant Widget -->
-    <script src="frontend/widget.js"></script>
+    <div id="app">
+        <h1>AI Chat Assistant</h1>
+        <p>The chat widget should appear in the bottom right corner.</p>
+    </div>
+    <script src="widget.js"></script>
 </body>
 </html>
